--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -554,7 +554,7 @@ h3 {
 }
 
 .project-3::before {
-  background-image: url('https://images.unsplash.com/photo-1618477247222-acbdb0e159b3?w=500&h=300&fit=crop');
+  background-image: url('/assets/images/monochromea.png');
 }
 
 .project-4::before {
